--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetTabControls/TexturesAssetTabControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetTabControls/TexturesAssetTabControl.xaml
@@ -24,7 +24,7 @@
 				<ColumnDefinition Width="18" />
 			</Grid.ColumnDefinitions>
 			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" FontWeight="Bold">Texture name</TextBlock>
-			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" FontWeight="Bold">Entity name</TextBlock>
+			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" FontWeight="Bold">Tags</TextBlock>
 			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" FontWeight="Bold">Description</TextBlock>
 			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="3" FontWeight="Bold">Path</TextBlock>
 		</Grid>
