--- a/DevilDaggersAssetEditor/Gui/UserControls/MenuBar.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/MenuBar.xaml
@@ -1,14 +1,17 @@
 ﻿<UserControl x:Class="DevilDaggersAssetEditor.Gui.UserControls.MenuBarUserControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 mc:Ignorable="d" 
              d:DesignHeight="20" d:DesignWidth="800">
 	<Menu DockPanel.Dock="Top" Name="MenuPanel">
 		<MenuItem Header="File" Name="FileMenuItem" />
 		<MenuItem Header="Options">
 			<MenuItem Header="Settings" Click="Settings_Click" />
+		</MenuItem>
+		<MenuItem Header="Tools">
+			<MenuItem Header="Open binary file analyzer" Click="FileAnalyzerMenuItem_Click" />
 		</MenuItem>
 		<MenuItem Header="Help">
 			<MenuItem Header="About" Click="About_Click" />
