--- a/DevilDaggersAssetEditor/Gui/Windows/BinaryFileAnalyzer.xaml
+++ b/DevilDaggersAssetEditor/Gui/Windows/BinaryFileAnalyzer.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="DevilDaggersAssetEditor.Gui.Windows.FileAnalyzerWindow"
+﻿<Window x:Class="DevilDaggersAssetEditor.Gui.Windows.BinaryFileAnalyzerWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
