--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/ParticleAssetRowControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/ParticleAssetRowControl.xaml
@@ -8,15 +8,17 @@
 	<Grid x:Name="Data">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="3*" />
+			<ColumnDefinition Width="3*" />
 			<ColumnDefinition Width="5*" />
-			<ColumnDefinition Width="9*" />
+			<ColumnDefinition Width="6*" />
 			<ColumnDefinition />
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" Text="{Binding AssetName}" />
-		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" Text="{Binding Description}" />
-		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Name="TextBlockEditorPath" />
-		<Button Grid.Column="3" Click="ButtonRemovePath_Click">Reset</Button>
-		<Button Grid.Column="4" Click="ButtonBrowsePath_Click">Browse</Button>
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" Name="TextBlockTags" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Text="{Binding Description}" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="3" Name="TextBlockEditorPath" />
+		<Button Grid.Column="4" Click="ButtonRemovePath_Click">Reset</Button>
+		<Button Grid.Column="5" Click="ButtonBrowsePath_Click">Browse</Button>
 	</Grid>
 </UserControl>
