--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetTabControls/TexturesAssetTabControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetTabControls/TexturesAssetTabControl.xaml
@@ -5,7 +5,7 @@
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:previewerControls="clr-namespace:DevilDaggersAssetEditor.Gui.UserControls.PreviewerControls"
 			 mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
+             d:DesignHeight="800" d:DesignWidth="800"
 			 Loaded="UserControl_Loaded">
 	<Grid>
 		<Grid.RowDefinitions>
@@ -14,7 +14,7 @@
 			<RowDefinition />
 		</Grid.RowDefinitions>
 		<previewerControls:TexturePreviewerControl Grid.Row="0" x:Name="Previewer" />
-		<Grid Grid.Row="1">
+		<Grid Grid.Row="1" Background="DarkGray">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="22" />
 				<RowDefinition />
@@ -29,7 +29,7 @@
 				<ColumnDefinition Width="18" />
 			</Grid.ColumnDefinitions>
 
-			<StackPanel Orientation="Horizontal" Grid.ColumnSpan="6" Background="#ddd">
+			<StackPanel Orientation="Horizontal" Grid.ColumnSpan="6" Background="#bbb">
 				<TextBlock Style="{StaticResource AssetTextBlock}" FontWeight="Bold">Tag filters</TextBlock>
 				<RadioButton GroupName="FilterOperations" Margin="4" Name="FilterOperationAnd">And</RadioButton>
 				<RadioButton GroupName="FilterOperations" Margin="4" Name="FilterOperationOr" IsChecked="True">Or</RadioButton>
