--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetTabControls/AudioAssetTabControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetTabControls/AudioAssetTabControl.xaml
@@ -38,11 +38,26 @@
 			<Grid Grid.ColumnSpan="7" Grid.Row="1" HorizontalAlignment="Stretch" Background="#ccc" Name="Filters" />
 
 			<Rectangle Grid.ColumnSpan="7" Grid.Row="2" Fill="#bbb" />
-			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Row="2" Grid.Column="0" FontWeight="Bold">Audio name</TextBlock>
-			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Row="2" Grid.Column="1" FontWeight="Bold">Tags</TextBlock>
-			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Row="2" Grid.Column="2" FontWeight="Bold">Description</TextBlock>
-			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Row="2" Grid.Column="3" FontWeight="Bold">Loudness</TextBlock>
-			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Row="2" Grid.Column="4" FontWeight="Bold">Path</TextBlock>
+			<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0">
+				<TextBlock Style="{StaticResource AssetTextBlock}" FontWeight="Bold">Audio name</TextBlock>
+				<Button Name="NameSortButton" Click="NameSortButton_Click">S</Button>
+			</StackPanel>
+			<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1">
+				<TextBlock Style="{StaticResource AssetTextBlock}" FontWeight="Bold">Tags</TextBlock>
+				<Button Name="TagsSortButton" Click="TagsSortButton_Click">S</Button>
+			</StackPanel>
+			<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="2">
+				<TextBlock Style="{StaticResource AssetTextBlock}" FontWeight="Bold">Description</TextBlock>
+				<Button Name="DescriptionSortButton" Click="DescriptionSortButton_Click">S</Button>
+			</StackPanel>
+			<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="3">
+				<TextBlock Style="{StaticResource AssetTextBlock}" FontWeight="Bold">Loudness</TextBlock>
+				<Button Name="LoudnessSortButton" Click="LoudnessSortButton_Click">S</Button>
+			</StackPanel>
+			<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="4">
+				<TextBlock Style="{StaticResource AssetTextBlock}" FontWeight="Bold">Path</TextBlock>
+				<Button Name="PathSortButton" Click="PathSortButton_Click">S</Button>
+			</StackPanel>
 		</Grid>
 		<ListView Grid.Row="2" Name="AssetEditor" BorderThickness="0" HorizontalContentAlignment="Stretch" SelectionMode="Single" SelectionChanged="AssetEditor_SelectionChanged" ScrollViewer.VerticalScrollBarVisibility="Visible" ItemContainerStyle="{StaticResource ListViewItemContainerStyle}" />
 	</Grid>
