--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetTabControls/AudioAssetTabControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetTabControls/AudioAssetTabControl.xaml
@@ -24,8 +24,8 @@
 				<ColumnDefinition Width="3*" />
 				<ColumnDefinition Width="3*" />
 				<ColumnDefinition Width="5*" />
-				<ColumnDefinition />
-				<ColumnDefinition Width="5*" />
+				<ColumnDefinition Width="1.2*" />
+				<ColumnDefinition Width="4.8*" />
 				<ColumnDefinition Width="2*" />
 				<ColumnDefinition Width="18" />
 			</Grid.ColumnDefinitions>
@@ -40,23 +40,33 @@
 			<Rectangle Grid.ColumnSpan="7" Grid.Row="2" Fill="#bbb" />
 			<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0">
 				<TextBlock Style="{StaticResource AssetTextBlock}" FontWeight="Bold">Audio name</TextBlock>
-				<Button Name="NameSortButton" Click="NameSortButton_Click">S</Button>
+				<Button Name="NameSortButton" Click="NameSortButton_Click">
+					<Image Style="{StaticResource SortIcon}" />
+				</Button>
 			</StackPanel>
 			<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1">
 				<TextBlock Style="{StaticResource AssetTextBlock}" FontWeight="Bold">Tags</TextBlock>
-				<Button Name="TagsSortButton" Click="TagsSortButton_Click">S</Button>
+				<Button Name="TagsSortButton" Click="TagsSortButton_Click">
+					<Image Style="{StaticResource SortIcon}" />
+				</Button>
 			</StackPanel>
 			<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="2">
 				<TextBlock Style="{StaticResource AssetTextBlock}" FontWeight="Bold">Description</TextBlock>
-				<Button Name="DescriptionSortButton" Click="DescriptionSortButton_Click">S</Button>
+				<Button Name="DescriptionSortButton" Click="DescriptionSortButton_Click">
+					<Image Style="{StaticResource SortIcon}" />
+				</Button>
 			</StackPanel>
 			<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="3">
 				<TextBlock Style="{StaticResource AssetTextBlock}" FontWeight="Bold">Loudness</TextBlock>
-				<Button Name="LoudnessSortButton" Click="LoudnessSortButton_Click">S</Button>
+				<Button Name="LoudnessSortButton" Click="LoudnessSortButton_Click">
+					<Image Style="{StaticResource SortIcon}" />
+				</Button>
 			</StackPanel>
 			<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="4">
 				<TextBlock Style="{StaticResource AssetTextBlock}" FontWeight="Bold">Path</TextBlock>
-				<Button Name="PathSortButton" Click="PathSortButton_Click">S</Button>
+				<Button Name="PathSortButton" Click="PathSortButton_Click">
+					<Image Style="{StaticResource SortIcon}" />
+				</Button>
 			</StackPanel>
 		</Grid>
 		<ListView Grid.Row="2" Name="AssetEditor" BorderThickness="0" HorizontalContentAlignment="Stretch" SelectionMode="Single" SelectionChanged="AssetEditor_SelectionChanged" ScrollViewer.VerticalScrollBarVisibility="Visible" ItemContainerStyle="{StaticResource ListViewItemContainerStyle}" />
