--- a/DevilDaggersAssetEditor/App.xaml
+++ b/DevilDaggersAssetEditor/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="DevilDaggersAssetEditor.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Gui/Windows/Main.xaml">
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 StartupUri="Gui/Windows/Main.xaml"
 	<Application.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
