--- a/DevilDaggersAssetEditor/App.xaml
+++ b/DevilDaggersAssetEditor/App.xaml
@@ -2,6 +2,7 @@
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 StartupUri="Gui/Windows/Main.xaml"
+			 Exit="Application_Exit">
 	<Application.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
