--- a/DevilDaggersAssetEditor/Gui/Windows/Main.xaml
+++ b/DevilDaggersAssetEditor/Gui/Windows/Main.xaml
@@ -15,7 +15,7 @@
 			<RowDefinition />
 		</Grid.RowDefinitions>
 		<DockPanel Grid.Row="0">
-			<userControls:MenuBarUserControl />
+			<userControls:MenuBarUserControl x:Name="MenuBar" />
 		</DockPanel>
 		<ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Background="#777">
 			<TabControl Grid.Row="1" Name="TabControl" Width="1366" Height="768">
