--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/TextureAssetRowControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/TextureAssetRowControl.xaml
@@ -16,7 +16,7 @@
 		</Grid.ColumnDefinitions>
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" Text="{Binding AssetName}" />
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" Name="TextBlockTags" />
-		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Text="{Binding Description}" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Name="TextBlockDescription" />
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="3" Name="TextBlockEditorPath" />
 		<Button Grid.Column="4" Click="ButtonRemovePath_Click">Reset</Button>
 		<Button Grid.Column="5" Click="ButtonBrowsePath_Click">Browse</Button>
