--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/AudioAssetRowControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/AudioAssetRowControl.xaml
@@ -5,7 +5,8 @@
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 mc:Ignorable="d" 
              d:DesignHeight="24" d:DesignWidth="800"
-			 Loaded="UserControl_Loaded">
+			 Loaded="UserControl_Loaded"
+			 SizeChanged="UserControl_SizeChanged">
 	<Grid x:Name="Data">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="3*" />
