--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/ModelAssetRowControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/ModelAssetRowControl.xaml
@@ -4,7 +4,8 @@
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 mc:Ignorable="d" 
-             d:DesignHeight="24" d:DesignWidth="800">
+             d:DesignHeight="24" d:DesignWidth="800"
+			 SizeChanged="UserControl_SizeChanged">
 	<Grid x:Name="Data">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="3*" />
