--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/ShaderAssetRowControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/ShaderAssetRowControl.xaml
@@ -19,21 +19,12 @@
 			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockVertexName" Height="20" />
 			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockFragmentName" Height="20" />
 		</StackPanel>
-		<StackPanel Grid.Column="1">
-			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockTags" />
-		</StackPanel>
-		<StackPanel Grid.Column="2">
-			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockDescription" Height="40" />
-		</StackPanel>
+		<TextBlock Grid.Column="2" Style="{StaticResource AssetTextBlock}" Name="TextBlockDescription" Height="40" />
 		<StackPanel Grid.Column="3">
 			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockVertexEditorPath" Height="20" />
 			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockFragmentEditorPath" Height="20" />
 		</StackPanel>
-		<StackPanel Grid.Column="4">
-			<Button Click="ButtonRemovePath_Click">Reset</Button>
-		</StackPanel>
-		<StackPanel Grid.Column="5">
-			<Button Click="ButtonBrowsePath_Click">Browse</Button>
-		</StackPanel>
+		<Button Grid.Column="4" Click="ButtonRemovePath_Click">Reset</Button>
+		<Button Grid.Column="5" Click="ButtonBrowsePath_Click">Browse</Button>
 	</Grid>
 </UserControl>
