--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetTabControls/ShadersAssetTabControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetTabControls/ShadersAssetTabControl.xaml
@@ -6,7 +6,8 @@
 			 xmlns:previewerControls="clr-namespace:DevilDaggersAssetEditor.Gui.UserControls.PreviewerControls"
 			 mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="800"
-			 Loaded="UserControl_Loaded">
+			 Loaded="UserControl_Loaded"
+			 SizeChanged="UserControl_SizeChanged">
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="416" />
