--- a/DevilDaggersAssetEditor/Gui/Windows/BinaryFileAnalyzer.xaml
+++ b/DevilDaggersAssetEditor/Gui/Windows/BinaryFileAnalyzer.xaml
@@ -4,7 +4,7 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d"
-        Title="File analyzer" Height="512" Width="1366" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="File analyzer" Height="512" Width="1366" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Background="#bbb">
 	<StackPanel>
 		<Button Name="ButtonBrowse" Click="ButtonBrowse_Click" Width="128">Browse binary file</Button>
 		<Canvas Name="C" Width="1280" Height="32" />
