--- a/DevilDaggersAssetEditor/Gui/Windows/BinaryFileAnalyzer.xaml
+++ b/DevilDaggersAssetEditor/Gui/Windows/BinaryFileAnalyzer.xaml
@@ -4,13 +4,13 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d"
-        Title="Binary file analyzer" Height="512" Width="1366" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Background="#bbb">
+        Title="Binary file analyzer" Height="1024" Width="1366" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Background="#bbb">
 	<StackPanel Margin="32">
-		<Button Name="ButtonBrowse" Click="ButtonBrowse_Click" Width="128">Browse binary file</Button>
-		<Canvas Name="Canvas" Height="32" />
+		<Border BorderBrush="Black" BorderThickness="2" Width="1284">
+			<Canvas Name="Canvas" Height="32" Width="1280" />
+		</Border>
 		<Label Name="FileName" HorizontalAlignment="Center" FontSize="24" />
 		<Label Name="FileSize" HorizontalAlignment="Center" FontWeight="Bold" FontSize="18" />
-		<Separator Name="Separator" Visibility="Hidden" />
-		<Grid Name="Data" />
+		<StackPanel Name="Data" Width="1280" />
 	</StackPanel>
 </Window>
