--- a/DevilDaggersAssetEditor/Gui/Windows/BinaryFileAnalyzer.xaml
+++ b/DevilDaggersAssetEditor/Gui/Windows/BinaryFileAnalyzer.xaml
@@ -7,15 +7,15 @@
         Title="Binary file analyzer" Height="1024" Width="1366" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Background="#bbb">
 	<ScrollViewer>
 		<StackPanel Margin="32">
-			<Border BorderBrush="Black" BorderThickness="2" Width="1264">
+			<Border BorderBrush="Black" BorderThickness="2" Width="1264" HorizontalAlignment="Left">
 				<Canvas Name="Canvas" Height="32" Width="1260" />
 			</Border>
-			<Label Name="FileName" HorizontalAlignment="Center" FontWeight="Bold" FontSize="24" />
-			<Label Name="FileSize" HorizontalAlignment="Center" FontWeight="Bold" FontSize="18" />
-			<Label HorizontalAlignment="Center" FontSize="18" FontWeight="Bold" Margin="16">Data</Label>
-			<StackPanel Name="Data" Width="1260" />
-			<Label HorizontalAlignment="Center" FontSize="18" FontWeight="Bold" Margin="16">Chunks</Label>
-			<Grid Name="ChunkData" Width="1260" />
+			<Label Name="FileName" FontWeight="Bold" FontSize="24" />
+			<Label Name="FileSize" FontWeight="Bold" FontSize="18" />
+			<Label FontSize="18" FontWeight="Bold" Margin="0,16">Data</Label>
+			<StackPanel Name="Data" Width="1260" HorizontalAlignment="Left" />
+			<Label FontSize="18" FontWeight="Bold" Margin="0,16">Chunks</Label>
+			<Grid Name="ChunkData" Width="1260" HorizontalAlignment="Left" />
 		</StackPanel>
 	</ScrollViewer>
 </Window>
