--- a/DevilDaggersAssetEditor/Gui/UserControls/MenuBar.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/MenuBar.xaml
@@ -16,6 +16,7 @@
 		<MenuItem Header="Help">
 			<MenuItem Header="About" Click="About_Click" />
 			<MenuItem Header="Changelog" Click="Changelog_Click" />
+			<MenuItem Header="Guide" Click="Guide_Click" />
 			<MenuItem Header="View source code" Click="SourceCode_Click" />
 			<MenuItem Header="Check for updates" Name="UpdateItem" Click="Update_Click" />
 			<MenuItem Header="Show log" Click="ShowLog_Click" />
