--- a/DevilDaggersAssetEditor/Gui/UserControls/MenuBar.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/MenuBar.xaml
@@ -14,9 +14,9 @@
 			<MenuItem Header="Analyze binary file" Click="AnalyzeBinaryFileMenuItem_Click" />
 		</MenuItem>
 		<MenuItem Header="Help">
+			<MenuItem Header="Help" Click="Help_Click" />
 			<MenuItem Header="About" Click="About_Click" />
 			<MenuItem Header="Changelog" Click="Changelog_Click" />
-			<MenuItem Header="Guide" Click="Guide_Click" />
 			<MenuItem Header="View source code" Click="SourceCode_Click" />
 			<MenuItem Header="Check for updates" Name="UpdateItem" Click="Update_Click" />
 			<MenuItem Header="Show log" Click="ShowLog_Click" />
