--- a/DevilDaggersAssetEditor/Gui/UserControls/PreviewerControls/ShaderPreviewerControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/PreviewerControls/ShaderPreviewerControl.xaml
@@ -3,7 +3,7 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 mc:Ignorable="d" 
+			 mc:Ignorable="d"
              d:DesignHeight="416" d:DesignWidth="800">
 	<Grid Grid.Row="0" HorizontalAlignment="Stretch">
 		<Grid.ColumnDefinitions>
@@ -48,12 +48,12 @@
 
 		<StackPanel Grid.Column="2">
 			<Label Style="{StaticResource PreviewTitleLabel}">Vertex shader preview</Label>
-			<RichTextBox Height="384" Name="PreviewVertexTextBox" Style="{StaticResource CodeRichTextBox}" />
+			<TextBox Height="384" Name="PreviewVertexTextBox" Style="{StaticResource CodeTextBox}" />
 		</StackPanel>
 
 		<StackPanel Grid.Column="3">
 			<Label Style="{StaticResource PreviewTitleLabel}">Fragment shader preview</Label>
-			<RichTextBox Height="384" Name="PreviewFragmentTextBox" Style="{StaticResource CodeRichTextBox}" />
+			<TextBox Height="384" Name="PreviewFragmentTextBox" Style="{StaticResource CodeTextBox}" />
 		</StackPanel>
 	</Grid>
 </UserControl>
