Start implementing dark theme

--- a/DevilDaggersAssetEditor.Wpf/App.xaml
+++ b/DevilDaggersAssetEditor.Wpf/App.xaml
@@ -6,6 +6,7 @@
 	<Application.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="pack://application:,,,/DevilDaggersCore.Wpf;component/Themes/Dark.xaml" />
 				<ResourceDictionary Source="Gui/Themes/DevilDaggersAssetEditor.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
