--- a/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
@@ -1,11 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					xmlns:windows="clr-namespace:DevilDaggersAssetEditor.Wpf.Gui.Windows">
-	<Style TargetType="Window">
-		<Style.Setters>
-			<Setter Property="Background" Value="#bbb" />
-		</Style.Setters>
-	</Style>
 	<Style TargetType="{x:Type windows:AboutWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:HelpWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:LoadingWindow}" BasedOn="{StaticResource {x:Type Window}}" />
@@ -29,66 +24,22 @@
 
 	<Style TargetType="StackPanel" x:Key="PaddingStackPanel">
 		<Style.Setters>
-			<Setter Property="Margin" Value="12,12,12,12" />
+			<Setter Property="Margin" Value="12" />
 		</Style.Setters>
 	</Style>
 
 	<Style TargetType="TabControl">
 		<Style.Setters>
-			<Setter Property="Background" Value="#ddd" />
+			<Setter Property="Background" Value="{StaticResource Gray2}" />
 		</Style.Setters>
 	</Style>
 
-	<Style TargetType="Label">
-		<Style.Setters>
-			<Setter Property="Padding" Value="2,2,2,2" />
-			<Setter Property="Margin" Value="0,0,0,0" />
-		</Style.Setters>
-	</Style>
-	<Style TargetType="Label" x:Key="TitleLabel">
-		<Style.Setters>
-			<Setter Property="FontSize" Value="20" />
-		</Style.Setters>
-	</Style>
 	<Style TargetType="Label" x:Key="PreviewTitleLabel">
 		<Style.Setters>
 			<Setter Property="FontSize" Value="16" />
-			<Setter Property="Padding" Value="0,0,0,0" />
-			<Setter Property="Margin" Value="0,0,0,0" />
+			<Setter Property="Padding" Value="0" />
+			<Setter Property="Margin" Value="0" />
 			<Setter Property="FontWeight" Value="Bold" />
-		</Style.Setters>
-	</Style>
-
-	<Style TargetType="TextBox">
-		<Style.Triggers>
-			<Trigger Property="Validation.HasError" Value="True">
-				<Setter Property="Background" Value="#f88" />
-			</Trigger>
-		</Style.Triggers>
-		<Style.Setters>
-			<Setter Property="Validation.ErrorTemplate" Value="{x:Null}" />
-			<Setter Property="HorizontalAlignment" Value="Stretch" />
-			<Setter Property="Margin" Value="2,2,2,2" />
-			<Setter Property="Height" Value="20" />
-		</Style.Setters>
-	</Style>
-	<Style TargetType="TextBox" x:Key="ParagraphTextBox">
-		<Style.Setters>
-			<Setter Property="TextWrapping" Value="WrapWithOverflow" />
-			<Setter Property="Padding" Value="6,8,6,8" />
-		</Style.Setters>
-	</Style>
-
-	<Style TargetType="Button">
-		<Style.Setters>
-			<Setter Property="Margin" Value="2,2,2,2" />
-		</Style.Setters>
-	</Style>
-	<Style TargetType="Button" x:Key="OkButton">
-		<Style.Setters>
-			<Setter Property="Width" Value="128" />
-			<Setter Property="Margin" Value="2,6,2,2" />
-			<Setter Property="IsDefault" Value="True" />
 		</Style.Setters>
 	</Style>
 
@@ -106,29 +57,21 @@
 	<Style TargetType="TextBlock" x:Key="PaddingTextBlock">
 		<Style.Setters>
 			<Setter Property="TextWrapping" Value="WrapWithOverflow" />
-			<Setter Property="Padding" Value="2,2,2,2" />
-			<Setter Property="Margin" Value="0,0,0,0" />
+			<Setter Property="Padding" Value="2" />
+			<Setter Property="Margin" Value="0" />
 		</Style.Setters>
 	</Style>
 	<Style TargetType="TextBlock" x:Key="AssetTextBlock">
 		<Style.Setters>
-			<Setter Property="Margin" Value="2,2,2,2" />
+			<Setter Property="Margin" Value="2" />
 		</Style.Setters>
 	</Style>
 	<Style TargetType="TextBox" x:Key="CodeTextBox">
 		<Style.Setters>
 			<Setter Property="FontFamily" Value="Consolas" />
-			<Setter Property="Background" Value="Black" />
-			<Setter Property="Foreground" Value="White" />
+			<Setter Property="Background" Value="{StaticResource Gray1}" />
+			<Setter Property="Foreground" Value="{StaticResource Text}" />
 			<Setter Property="IsReadOnly" Value="True" />
-		</Style.Setters>
-	</Style>
-
-	<Style TargetType="Image" x:Key="Logo">
-		<Style.Setters>
-			<Setter Property="Width" Value="96" />
-			<Setter Property="Source" Value="/Content/Images/Icon/Icon32.png" />
-			<Setter Property="RenderOptions.BitmapScalingMode" Value="NearestNeighbor" />
 		</Style.Setters>
 	</Style>
 </ResourceDictionary>
