--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/Main.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/Main.xaml
@@ -17,7 +17,7 @@
 		<DockPanel Grid.Row="0">
 			<userControls:MenuBarUserControl x:Name="MenuBar" />
 		</DockPanel>
-		<ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Background="#777">
+		<ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
 			<TabControl Grid.Row="1" Name="TabControl" Width="1366" Height="768">
 				<TabItem Header="audio/Audio">
 					<assetTabControls:AudioAssetTabControl x:Name="AudioAudioAssetTabControl" BinaryFileType="Audio" />
